--- a/2DHockey/2DHockey/2DHockey.vbproj
+++ b/2DHockey/2DHockey/2DHockey.vbproj
@@ -167,6 +167,9 @@
   <ItemGroup>
     <None Include="assets\graphics\Hockeyrink.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\graphics\HockeyNet.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
