--- a/2DHockey/2DHockey/2DHockey.vbproj
+++ b/2DHockey/2DHockey/2DHockey.vbproj
@@ -92,6 +92,12 @@
       <DependentUpon>MainGame.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="MainMenu.Designer.vb">
+      <DependentUpon>MainMenu.vb</DependentUpon>
+    </Compile>
+    <Compile Include="MainMenu.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -117,6 +123,9 @@
   <ItemGroup>
     <EmbeddedResource Include="MainGame.resx">
       <DependentUpon>MainGame.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainMenu.resx">
+      <DependentUpon>MainMenu.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
