--- a/2DHockey/2DHockey/2DHockey.vbproj
+++ b/2DHockey/2DHockey/2DHockey.vbproj
@@ -221,6 +221,15 @@
     </BootstrapperPackage>
     <None Include="assets\graphics\HockeyNet.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\button for main menu.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\button for main menu1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ice-skating-background.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
