--- a/2DHockey/2DHockey/2DHockey.vbproj
+++ b/2DHockey/2DHockey/2DHockey.vbproj
@@ -113,6 +113,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="OptionsMenu.Designer.vb">
+      <DependentUpon>OptionsMenu.vb</DependentUpon>
+    </Compile>
+    <Compile Include="OptionsMenu.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="TeamSelection.Designer.vb">
       <DependentUpon>TeamSelection.vb</DependentUpon>
     </Compile>
@@ -132,6 +138,9 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OptionsMenu.resx">
+      <DependentUpon>OptionsMenu.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TeamSelection.resx">
       <DependentUpon>TeamSelection.vb</DependentUpon>
@@ -229,6 +238,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\ice-skating-background.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Main Screen Music.mp3" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Main_Screen_Music wav file.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\main menu.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
