--- a/2DHockey/2DHockey/2DHockey.vbproj
+++ b/2DHockey/2DHockey/2DHockey.vbproj
@@ -248,6 +248,12 @@
   <ItemGroup>
     <None Include="Resources\main menu.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\graphics\pause button.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\graphics\pause button white.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
