--- a/2DHockey/2DHockey/2DHockey.vbproj
+++ b/2DHockey/2DHockey/2DHockey.vbproj
@@ -275,6 +275,12 @@
   <ItemGroup>
     <None Include="Resources\Background 2.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\buzzer.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\buzzer.wav" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
